--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    /* background-image: url("./images/Currency-Background-Image-3.png");
-    background-repeat: no-repeat; */
+    background-image: url("./images/Currency-Background-Image-3.png");
+    background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
     
@@ -19,4 +19,5 @@ body {
 
 #map {
     height: 90vh;
+    width: 90vw;
 }
