Chart rendering completed with some bugs. All other parts techinically completed and proven working

--- a/style.css
+++ b/style.css
@@ -17,11 +17,12 @@ body {
 }
 
 #chart {
+    background-color: white;
     height: 50vh;
     width: 100vh;
 }
 
 #map {
-    height: 90vh;
+    height: 50vh;
     width: 90vw;
 }
